--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,7 +28,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'c81130aa-6025-40cf-90f9-d6ade32b40d6',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/AllergyIntolerance.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
