--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -68,7 +68,11 @@
           <th>Temperature:</th>
           <td id='temperature'></td>
         </tr>
+
       </table>
+    </div>
+    <div>AllergyIntolerance
+      <div id="allergies">Loading...</div>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
